# github_recsys

./: .gitignore  README.md  dep_filtering.py  dep_save_to_csv.py  design_choices.md  filtering.py  pyproject.toml  repo_embeddings.py  repo_filtering.py  spotlight.py  test.py  user_embeddings.py  user_filtering.py
archive/: a.py  hello_train.pkl  metrics_testing.py  weights.pt  weights_backup.pt
config/: __init__.py  config.py
recsys/: bloom_filter.py  pipeline.py  retrieval.py  retrival.py
recsys/bandits/: models.py  neuralucb.py
recsys/config/: __init__.py  config.py
recsys/evaluation/: evaluator.py  metrics.py
scripts/: 01_filter_repos.py  02_filter_users.py  03_build_repo_embeddings.py  04_build_user_embeddings.py  05_evaluate.py  06_evaluate_recommedations.py
