[project]
name = "github-recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "optimum[openvino]>=1.17.1",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers[openvino]>=5.3.0",
    "torch>=2.11.0",
]
